@@ -84,6 +84,8 @@ Version 1.9.9+svn:
      image lists
    * Evaluate key length even if intervening WML children don't exist (bug #18701)
    * Fix gold carryover if loading a save created in linger mode (bug #16111)
+   * Fixed: Compilation with boost 1.47 (bug #18399's patch).
+   * Fixed: Compilation with the clang 2.9 compiler (bug #18399's patch).
 
 Version 1.9.9:
  * AI:
